--- a/view/view_pilih_buku.form
+++ b/view/view_pilih_buku.form
@@ -35,7 +35,7 @@
     <Component class="javax.swing.JLabel" name="btn_save">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/images/btn_save.png"/>
+          <Image iconType="3" name="/images/btn_pilih.png"/>
         </Property>
       </Properties>
       <Events>
