--- a/view/view_peminjaman_detail.form
+++ b/view/view_peminjaman_detail.form
@@ -341,7 +341,7 @@
               <Font name="Osaka" size="20" style="0"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="0" red="0" type="rgb"/>
+              <Color blue="5f" green="5b" red="5b" type="rgb"/>
             </Property>
             <Property name="rows" type="int" value="5"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
